<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/className"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/class_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998"
        android:autofillHints="" />

    <EditText
        android:id="@+id/subjectName"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/subject_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/className"
        app:layout_constraintVertical_bias="0.050000012"
        android:autofillHints="" />

    <EditText
        android:id="@+id/noOfStudents"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/number_of_students"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subjectName"
        app:layout_constraintVertical_bias="0.050000012"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>